# sleepyTesting

./: README.md  pyproject.toml
sleepyTesting/: __init__.py
sleepyTesting/agents/: __init__.py  agent_hub.py  controller.py  decomposer.py  memory.py  supervisor.py
sleepyTesting/assertions/: __init__.py  custom.py  element.py  page.py
sleepyTesting/config/: __init__.py  config.py
sleepyTesting/core/: __init__.py  driver_factory.py  driver_interface.py  event_bus.py  ios_driver.py  llm.py  llm_provider.py  models.py  session_manager.py  uiautomator.py  user_interface.py  web_driver.py
sleepyTesting/tools/: __init__.py  base_tool.py  tool_registry.py  weather_tool.py
sleepyTesting/utils/: __init__.py  screenshot.py
